force-app/main/default/objects/Sample_Junction_Object__c/Sample_Junction_Object__c.object-meta.xml
<CustomObject>
    <label>Sample Junction Object</label>
    <nameField>
        <label>Sample Junction Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sample Junction Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>