force-app/main/default/objects/Sample_Junction_Object__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Sample Junction Object</relationshipLabel>
    <relationshipName>Sample_Junction_Object</relationshipName>
    <type>Lookup</type>
</CustomField>