force-app/main/default/objects/Sample_Junction_Object__c/fields/Sample_Object_1__c.field-meta.xml
<CustomField>
    <fullName>Sample_Object_1__c</fullName>
    <label>Sample Object 1</label>
    <referenceTo>Sample_Object_1__c</referenceTo>
    <relationshipLabel>Sample Junction Object</relationshipLabel>
    <relationshipName>Sample_Junction_Object</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>