force-app/main/default/objects/Sample_Junction_Object__c/fields/Sample_Object_3__c.field-meta.xml
<CustomField>
    <fullName>Sample_Object_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Object 3</label>
    <referenceTo>Sample_Object_3__c</referenceTo>
    <relationshipLabel>Sample Junction Object</relationshipLabel>
    <relationshipName>Sample_Junction_Object</relationshipName>
    <type>Lookup</type>
</CustomField>